<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <EditText
        android:id="@+id/searchTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="mac book"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/search_text_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- First Product Image And Title -->

    <ImageView
        android:id="@+id/firstProductImg"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:contentDescription="@string/first_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchTextBox"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/firstProductTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_product_title"
        android:textSize="@dimen/_12ssp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/black_to_white"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@+id/firstProductImg"
        app:layout_constraintStart_toStartOf="@+id/firstProductImg"
        app:layout_constraintTop_toBottomOf="@+id/firstProductImg"
        />

    <!-- Second product Image and Title -->
    <ImageView
        android:id="@+id/secondProductImg"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@string/second_product"
        app:layout_constraintEnd_toStartOf="@+id/thirdProductImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstProductTitle"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/secondProductTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_product_title"
        android:textColor="@color/black_to_white"
        android:textSize="@dimen/_12ssp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@+id/secondProductImg"
        app:layout_constraintStart_toStartOf="@+id/secondProductImg"
        app:layout_constraintTop_toBottomOf="@+id/secondProductImg" />

    <!-- Third Product Image And Title -->
    <ImageView
        android:id="@+id/thirdProductImg"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@string/third_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/secondProductImg"
        app:layout_constraintTop_toBottomOf="@+id/firstProductTitle"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/thirdProductTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_product_title"
        android:textColor="@color/black_to_white"
        android:textSize="@dimen/_12ssp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@+id/thirdProductImg"
        app:layout_constraintStart_toStartOf="@+id/thirdProductImg"
        app:layout_constraintTop_toBottomOf="@+id/thirdProductImg" />
</androidx.constraintlayout.widget.ConstraintLayout>